frontend/public/app.css
/* ... */
path.mg-confidence-band {
    fill: #ccc;
    opacity: 0.4;
    stroke: none;
}

path.mg-main-line {
    fill: none;
    opacity: 0.8;
    stroke-width: 1.1px;
}

.mg-points circle {
    fill-opacity: 0.4;
    stroke-opacity: 1;
}

circle.mg-points-mono {
    fill: #0000ff;
    stroke: #0000ff;
}

tspan.mg-points-mono {
    fill: #0000ff;
    stroke: #0000ff;
}

/* a selected point in a scatterplot */
.mg-points circle.selected {
    fill-opacity: 1;
    stroke-opacity: 1;
}

.mg-voronoi path {
    fill: none;
    pointer-events: all;
    stroke: none;
    stroke-opacity: 0.1;
}

.mg-x-rug-mono,
.mg-y-rug-mono {
    stroke: black;
}

.mg-x-axis line,
.mg-y-axis line {
    opacity: 1;
    shape-rendering: auto;
    stroke: #b3b2b2;
    stroke-width: 1px;
}

.mg-x-axis text,
.mg-y-axis text,
.mg-histogram .axis text {
    fill: black;
    font-size: 0.9rem;
    opacity: 0.6;
}

.mg-x-axis .label,
.mg-y-axis .label,
.mg-axis .label {
    font-size: 0.8rem;
    text-transform: uppercase;
    font-weight: 400;
}

.mg-x-axis-small text,
.mg-y-axis-small text,
.mg-active-datapoint-small {
    font-size: 0.6rem;
}

.mg-x-axis-small .label,
.mg-y-axis-small .label {
    font-size: 0.65rem;
}

.mg-european-hours {
}

.mg-year-marker text {
    fill: black;
    font-size: 0.7rem;
    opacity: 0.6;
}

.mg-year-marker line {
    opacity: 1;
    shape-rendering: auto;
    stroke: #b3b2b2;
    stroke-width: 1px;
}

.mg-year-marker-small text {
    font-size: 0.6rem;
}

body {
  background: #eaeaea;
  padding-bottom: 216px;
}
header {
  width: 100%;
  min-height: 50px;
  padding: 20px;
  margin-bottom: 20px;
  background: #fafafa;
}
header .search {
  width: 100%;
  margin-top: 25px;
}
.header-nav {
  margin-top: 25px;
  display: block;
}
.header-nav-item {
  padding: 10px 10px;
  display: inline-block;
  float: right;
  text-decoration: none;
  color: #777;
}
#logo {
  display: inline-block;
  margin-top: 0px;
  max-width: 250px;
}
.content {
  margin: auto;
  width: 95%;
  max-width: 1600px;
}
.tabs li.active a {
  color: #000;
  background: #eaeaea;
  border-bottom: 1px solid #eaeaea;
}
section#landing h1 {
  font-size: 25px;
}
section {
  width: 100%;
  padding: 36px;
  float: right;
  margin: 0 0 24px 0;
  background: #fafafa;
  box-shadow: 5px 5px 20px 2px rgba(0,0,0,0.03);
}
section h2 {
  font-size: 21px;
  line-height: 32px;
  color: #7d7d7d;
  margin-bottom: 50px;
}
section small {
  display: block;
  width: 100%;
  margin-top: 30px;
  padding-right: 20px;
  text-align: right;
  color: #aaa;
}
section small a {
  color: #aaf;
  text-decoration: none;
}
section.unmaterialized {
  box-shadow: 0 0 0 0;
  background: #f0f0f0;
  padding: 24px 24px 48px 24px;
  border-right: 1px solid #dedede;
  border-bottom: 1px solid #dedede;
}
#controls {
  padding: 18px 36px 5px 36px;
  background: #f0f0f0;
  border-right: 1px solid #dedede;
  border-bottom: 1px solid #dedede;
  margin-bottom: 20px;
}
#comparetext {
  padding: 10px 0px 0px 0px;
}
.fixed {
  position: relative;
}
section.status {
  box-shadow: 0 0 0 0;
  background: #f0f0f0;
  padding: 24px 24px 48px 24px;
}
@media (min-width: 1230px) {
  #cards {
    width: 100%;
    padding-bottom: 100px;
    position: relative;
    z-index: 9;
  }
  section {
    z-index: 10;
  }
  #landing {
    width: 100%;
  }
  .fixed-container {
    z-index: 0;
    position: absolute;
    top: 245px;
    left: calc(50% - (540px));
  }
  .fixed {
    position: fixed !important;
    top: 25px;
  }
}
.warn {
  color: #f00;
}
.warn:before {
  content: ' ⚠ ';
}
.below-chart {
  position: relative;
  z-index: 2;
  width: 100%;
  margin: -10px 0px 30px 0px;
  padding: 0px 10px 0px 25px;
}
.section {
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  height: auto;
  max-height: 600px;
  position: relative;
}
.section.collapsed {
  max-height: 0;
}
.collapsible.fade::after {
  content: '';
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 40px;
  background: -webkit-linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: -moz-linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: -o-linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: linear-gradient(rgba(250,250,250,0) 0%, #f0f0f0 100%);
  background-image: -ms-linear-gradient(rgba(25,250,250,0) 0%, #f0f0f0 100%);
}
.section.showsome {
  max-height: 100px;
}
cite.metric {
  display: block;
  width: 100%;
  height: 0;
  margin-left: 52px;
  float: left;
  text-align: left;
  font-size: 12px;
  color: #ccc;
  font-style: normal;
}
cite.metric a {
  color: #aaa;
  text-decoration: underline;
}
.graph-download {
  background: 0;
  color: #ccc;
  font-size: 0.7em;
  height: 5px !important;
  line-height: 30px;
  float: right;
  margin: -7px 7px 0 0 !important;
  padding: 3px !important;
}
.graph-download:hover {
  background: #eee;
  color: #000;
}
.error {
  justify-content: center;
  padding: 30px 0px 31px 20px;
  text-align: center;
  margin: auto;
}
.error:before {
  content: "\26A0";
  font-size: 3em;
  justify-content: center;
  padding: 50px 50px 50px 50px;
  text-align: center;
  margin: auto;
}
#optionheader {
  font-size: 1.1em;
  font-weigth: 600;
}
.marks {
  padding: 10px 0px 0px 0px !important;
}
.role-title > text {
  font-size: 20px !important;
  font-weight: normal !important;
}
.bubblechart {
  width: 100%;
}
.bubblechart * {
  overflow: visible !important;
}
.stackedbarchart * {
  overflow: visible !important;
  width: 100%;
  margin-bottom: 30px;
}
.bubblechart svg {
  width: 100%;
}
.mg-line-legend {
  display: none;
}
.legend {
  position: relative;
  margin: 0;
  padding: 0;
  height: 0;
  top: 31px;
  left: 55px;
  font-size: 14px;
  font-weight: bold;
  opacity: 0.8;
}
.mg-baselines {
  opacity: 0.5;
}
#collapse {
  padding: 10px 0px 0px 0px;
}
.linechart {
  padding: 0px 0px 0px 18px;
}
/* ... */

